--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,12 @@ testFileLoader.m
 5.05_ID1662_769_0001.vol.info
 dist_hist2_pag.m
 ag_search*
+biasImg.mat
+biasImgOpened.mat
+circ.mat
+croppedImage.mat
+fourthAttempt.mat
+img.mat
+imgWithBalls.mat
+secondAttempt.mat
+thirdAttempt.mat
