--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,11 @@ maskMovie
 817
 818
 819
+._.DS_Store
+5.05_ID1662_769_0001.vol
+5.05_ID1662_769_0001.vol.info
+5.05_ID1662_769_0001_masks_2_v6.mat
+5.05_ID1662_769_0001_masks_median_v6.mat
+5.05_ID1662_769_0001_masks_v6.mat
+data
+histologyImages
