--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,4 @@ experimentationScripts/glob.m
 experimentationScripts/normImage.m
 experimentationScripts/parseVolInfo.m
 experimentationScripts/.DS_Store
+*.DS_Store
