--- a/.gitignore
+++ b/.gitignore
@@ -57,41 +57,6 @@ torstensKurve.fig
 volumeFractions.fig
 maskMovie
 5.05_ID1662_769_0001_masks_v6.mat
-769
-770
-771
-772
-773
-774
-775
-776
-777
-778
-779
-780
-781
-782
-783
-784
-785
-786
-787
-788
-805
-806
-807
-808
-809
-810
-811
-812
-813
-814
-815
-816
-817
-818
-819
 ._*
 5.05_ID1662_769_0001.vol
 5.05_ID1662_769_0001.vol.info
@@ -131,3 +96,6 @@ segmentations2
 smallSegmentations2
 experimentationScripts/loadDataset.m
 *.mat
+volfloat/
+datalisting.txt
+figExport
